[package]
name = "rust-mongodb-ddd-repository"
version = "0.1.0"
authors = ["Sean"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mongodb = { version = "1.1.1", default-features = false, features = ["sync"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["std", "derive"] }
thiserror = "1.0.18"

[dev-dependencies]
tokio-test = "0.3.0"
lazy_static = "1.4.0"